project(OpenEXR LANGUAGES CXX)

add_library(OpenEXR STATIC
						# Source Files
						# IlmImf Source Files
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/b44ExpLogTable.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfAttribute.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfB44Compressor.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfBoxAttribute.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfChannelList.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfChannelListAttribute.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfChromaticities.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfChromaticitiesAttribute.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfCompressionAttribute.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfCompressor.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfConvert.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfCRgbaFile.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfDoubleAttribute.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfEnvmap.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfEnvmapAttribute.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfFloatAttribute.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfFrameBuffer.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfFramesPerSecond.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfHeader.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfHuf.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfInputFile.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfIntAttribute.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfIO.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfKeyCode.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfKeyCodeAttribute.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfLineOrderAttribute.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfLut.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfMatrixAttribute.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfMisc.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfOpaqueAttribute.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfOutputFile.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfPizCompressor.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfPreviewImage.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfPreviewImageAttribute.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfPxr24Compressor.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfRational.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfRationalAttribute.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfRgbaFile.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfRgbaYca.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfRleCompressor.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfScanLineInputFile.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfStandardAttributes.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfStdIO.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfStringAttribute.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfTestFile.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfThreading.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfTileDescriptionAttribute.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfTiledInputFile.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfTiledMisc.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfTiledOutputFile.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfTiledRgbaFile.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfTileOffsets.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfTimeCode.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfTimeCodeAttribute.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfVecAttribute.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfVersion.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfWav.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfZipCompressor.cpp"
						# Imath Source Files
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathColorAlgo.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathFun.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathMatrixAlgo.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathRandom.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathVec.cpp"
						# Iex Source Files
						"${CMAKE_CURRENT_SOURCE_DIR}/Iex/IexBaseExc.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/Iex/IexThrowErrnoExc.cpp"
						# Half Source Files
						"${CMAKE_CURRENT_SOURCE_DIR}/Half/half.cpp"
						# IlmThread Source Files
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmThread/IlmThread.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmThread/IlmThreadMutex.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmThread/IlmThreadPool.cpp"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmThread/IlmThreadSemaphore.cpp"
						# Header Files
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmBaseConfig.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/OpenEXRConfig.h"
						# IlmImf Header Files
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/b44ExpLogTable.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfArray.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfAttribute.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfAutoArray.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfB44Compressor.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfBoxAttribute.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfChannelList.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfChannelListAttribute.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfChromaticities.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfChromaticitiesAttribute.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfCompression.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfCompressionAttribute.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfCompressor.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfConvert.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfCRgbaFile.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfDoubleAttribute.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfEnvmap.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfEnvmapAttribute.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfFloatAttribute.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfFrameBuffer.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfFramesPerSecond.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfHeader.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfHuf.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfInputFile.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfInt64.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfIntAttribute.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfIO.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfKeyCode.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfKeyCodeAttribute.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfLineOrder.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfLineOrderAttribute.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfLut.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfMatrixAttribute.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfMisc.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfName.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfOpaqueAttribute.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfOutputFile.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfPixelType.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfPizCompressor.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfPreviewImage.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfPreviewImageAttribute.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfPxr24Compressor.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfRational.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfRationalAttribute.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfRgba.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfRgbaFile.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfRgbaYca.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfRleCompressor.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfScanLineInputFile.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfStandardAttributes.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfStdIO.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfStringAttribute.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfTestFile.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfThreading.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfTileDescription.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfTileDescriptionAttribute.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfTiledInputFile.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfTiledMisc.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfTiledOutputFile.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfTiledRgbaFile.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfTileOffsets.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfTimeCode.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfTimeCodeAttribute.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfVecAttribute.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfVersion.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfWav.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfXdr.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmImf/ImfZipCompressor.h"
						# Imath Header Files
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathBox.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathBoxAlgo.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathColor.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathColorAlgo.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathEuler.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathExc.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathFrame.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathFrustum.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathFun.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathGL.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathGLU.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathHalfLimits.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathInterval.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathLimits.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathLine.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathLineAlgo.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathMath.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathMatrix.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathMatrixAlgo.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathPlane.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathPlatform.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathQuat.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathRandom.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathRoots.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathShear.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathSphere.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathVec.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Imath/ImathVecAlgo.h"
						# Iex Header Files
						"${CMAKE_CURRENT_SOURCE_DIR}/Iex/Iex.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Iex/IexBaseExc.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Iex/IexErrnoExc.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Iex/IexMacros.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Iex/IexMathExc.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Iex/IexThrowErrnoExc.h"
						# Half Header Files
						"${CMAKE_CURRENT_SOURCE_DIR}/Half/eLut.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Half/half.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Half/halfFunction.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Half/halfLimits.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/Half/toFloat.h"
						# IlmThread Header Files
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmThread/IlmThread.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmThread/IlmThreadMutex.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmThread/IlmThreadPool.h"
						"${CMAKE_CURRENT_SOURCE_DIR}/IlmThread/IlmThreadSemaphore.h"
						# ./
)

target_include_directories(OpenEXR PRIVATE
	${THIRDPARTY_DIR_INCLUDE_PATH}/freeimage/OpenEXR
	${THIRDPARTY_DIR_INCLUDE_PATH}/freeimage/OpenEXR/Half
	${THIRDPARTY_DIR_INCLUDE_PATH}/freeimage/OpenEXR/Iex
	${THIRDPARTY_DIR_INCLUDE_PATH}/freeimage/OpenEXR/IlmImf
	${THIRDPARTY_DIR_INCLUDE_PATH}/freeimage/OpenEXR/IlmThread
	${THIRDPARTY_DIR_INCLUDE_PATH}/freeimage/OpenEXR/Imath
)

set_target_properties(OpenEXR PROPERTIES FOLDER "engine/sdk/freeimage")
