project(luabind LANGUAGES CXX)

add_library(luabind.0.8.1 STATIC
							# sources
							"${CMAKE_CURRENT_SOURCE_DIR}/class.cpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/class_info.cpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/class_registry.cpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/class_rep.cpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/create_class.cpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/error.cpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/find_best_match.cpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/function.cpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/implicit_cast.cpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/link_compatibility.cpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/object_rep.cpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/open.cpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/overload_rep.cpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/pcall.cpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/ref.cpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/scope.cpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/stack_content_by_name.cpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/weak_ref.cpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/wrapper_base.cpp"
							# include
							"${CMAKE_CURRENT_SOURCE_DIR}/../adopt_policy.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../back_reference.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../back_reference_fwd.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../class.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../class_info.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../config.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../container_policy.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../copy_policy.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../dependency_policy.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../discard_result_policy.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../error.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../exception_handler.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../from_stack.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../function.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../get_pointer.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../handle.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../iterator_policy.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../library_linkage.h"
							"${CMAKE_CURRENT_SOURCE_DIR}/../lua_include.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../luabind.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../luabind_auto_ptr.h"
							"${CMAKE_CURRENT_SOURCE_DIR}/../luabind_delete.h"
							"${CMAKE_CURRENT_SOURCE_DIR}/../luabind_memory.h"
							"${CMAKE_CURRENT_SOURCE_DIR}/../luabind_memory_allocator.h"
							"${CMAKE_CURRENT_SOURCE_DIR}/../luabind_memory_allocator_inline.h"
							"${CMAKE_CURRENT_SOURCE_DIR}/../luabind_memory_manager_generator.h"
							"${CMAKE_CURRENT_SOURCE_DIR}/../luabind_types.h"
							"${CMAKE_CURRENT_SOURCE_DIR}/../make_function.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../nil.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../object.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../open.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../operator.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../out_value_policy.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../prefix.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../raw_policy.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../return_reference_to_policy.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../scope.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../tag_function.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../value_wrapper.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../version.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../weak_ref.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../wrapper_base.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../yield_policy.hpp"
							# detail
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/calc_arity.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/call.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/call_function.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/call_member.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/call_operator_iterate.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/class_cache.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/class_registry.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/class_rep.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/compute_score.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/construct_rep.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/constructor.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/conversion_storage.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/convert_to_lua.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/debug.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/decorate_type.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/deduce_signature.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/enum_maker.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/find_best_match.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/format_signature.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/garbage_collector.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/get_overload_signature.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/get_signature.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/has_get_pointer.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/implicit_cast.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/is_indirect_const.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/link_compatibility.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/most_derived.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/object_call.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/object_funs.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/object_rep.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/open.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/operator_id.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/other.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/overload_rep.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/overload_rep_base.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/pcall.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/pointee_sizeof.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/pointee_typeid.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/policy.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/primitives.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/property.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/ref.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/signature_match.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/stack_utils.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/typetraits.hpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/../detail/yes_no.hpp"
							# ./
							"${CMAKE_CURRENT_SOURCE_DIR}/library_linkage.cpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/luabind_memory.cpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/pch.cpp"
							"${CMAKE_CURRENT_SOURCE_DIR}/pch.h"
)

set_target_properties(luabind.0.8.1 PROPERTIES FOLDER "engine/sdk")
