project(ode LANGUAGES CXX)

add_library(ode STATIC
					# Header Files
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/amotor.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/array.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/ball.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/../collision.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_kernel.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/../collision_space.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_space_internal.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_std.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_transform.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/../collision_trimesh.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_trimesh_internal.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_util.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/contact.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/fixed.h"
					# MISSING
					#"${CMAKE_CURRENT_SOURCE_DIR}/geom_internal.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/hinge.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/hinge2.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/joint.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/joint_internal.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/joints.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/lcp.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/lmotor.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/mat.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/null.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/objects.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/obstack.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/../odecpp_collision.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/piston.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/plane2d.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/pr.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/pu.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/quickstep.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/slider.h"
					# MISSING
					#"${CMAKE_CURRENT_SOURCE_DIR}/stack.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/step.h"
					# MISSING
					#"${CMAKE_CURRENT_SOURCE_DIR}/StepJointInternal.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/testing.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/universal.h"
					# Shared Header Files
					"${CMAKE_CURRENT_SOURCE_DIR}/../common.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/../compatibility.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/config.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/../contact.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/../error.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/../export-dif.h"
					# MISSING
					#"${CMAKE_CURRENT_SOURCE_DIR}/../geom.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/../mass.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/../matrix.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/../memory.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/../misc.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/../objects.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/../ode.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/../odecpp.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/../odemath.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/../rotation.h"
					# MISSING
					#"${CMAKE_CURRENT_SOURCE_DIR}/../space.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/../timer.h"
					# Source Files
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/amotor.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/array.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/ball.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/box.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/capsule.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_cylinder_box.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_cylinder_plane.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_cylinder_sphere.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_cylinder_trimesh.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_kernel.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_quadtreespace.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_sapspace.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_space.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_transform.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_trimesh_box.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_trimesh_ccylinder.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_trimesh_colliders.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_trimesh_disabled.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_trimesh_distance.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_trimesh_gimpact.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_trimesh_opcode.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_trimesh_plane.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_trimesh_ray.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_trimesh_sphere.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_trimesh_trimesh.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_trimesh_trimesh_new.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/collision_util.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/config.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/contact.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/convex.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/cylinder.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/error.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/export-dif.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/fastdot.c"
					"${CMAKE_CURRENT_SOURCE_DIR}/fastldlt.c"
					"${CMAKE_CURRENT_SOURCE_DIR}/fastlsolve.c"
					"${CMAKE_CURRENT_SOURCE_DIR}/fastltsolve.c"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/fixed.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/heightfield.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/heightfield.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/hinge.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/hinge2.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/joint.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/lcp.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/lmotor.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/mass.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/mat.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/matrix.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/memory.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/misc.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/null.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/obstack.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/ode.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/odeinit.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/odemath.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/odeou.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/odeou.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/odetls.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/odetls.h"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/piston.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/plane.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/plane2d.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/pr.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/pu.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/quickstep.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/ray.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/rotation.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/slider.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/sphere.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/step.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/stepfast.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/testing.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/timer.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/joints/universal.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/util.cpp"
					"${CMAKE_CURRENT_SOURCE_DIR}/util.h"
					# ./
)

target_include_directories(ode PRIVATE
	${SOLUTION_DIR_INCLUDE_PATH}
	${THIRDPARTY_DIR_INCLUDE_PATH}
)
target_compile_options(ode PRIVATE
	/wd4100
	/wd4505
)

set_target_properties(ode PROPERTIES FOLDER "engine/sdk")
